# easycarla

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
examples/: carla_sync_mode.py  client_bounding_boxes.py  generate_traffic.py  run.cmd  visualize_multiple_sensors.py
src/easycarla/: main.py  sensors.py
src/easycarla/labels/: __init__.py  calib_data.py  calibration_data.py  kitti.py  label_data.py  label_manager.py  label_types.py
src/easycarla/sensors/: __init__.py  camera_sensor.py  depth_camera_sensor.py  depth_sensor.py  inseg_camera_sensor.py  lidar_sensor.py  rgb_sensor.py  sensor.py  world_sensor.py
src/easycarla/sim/: __init__.py  bbs.py  bounding_boxes.py  carla_handler.py  carla_sync_mode.py  display_manager.py  label_manager.py  process_data.py  process_data2.py  sensor.py  sensor_manager.py  simulation_manager.py  spawn_manager.py  traffic_simulation.py
src/easycarla/tf/: __init__.py  projection.py  transformation.py
src/easycarla/utils/: algorithm.py  carla_helper.py
src/easycarla/visu/: __init__.py  display_manager.py  pygame_handler.py
