[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "easycarla"
version = "0.1.0"
description = "Machine Learning Data Generation with Carla"
authors = ["Leunar Kalludra <leunarkalludra@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/leunark/easycarla"
repository = "https://github.com/leunark/easycarla"
documentation = "https://github.com/leunark/easycarla"
keywords = ["Carla", "Dataset", "Generation"]
packages = [{include = "easycarla", from="src"}]

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
carla = "*"
pygame = "*"
numpy = "*"
networkx = "*"
distro = "*"
Shapely = "*"
open3d = "*"
matplotlib = "*"
opencv-python = "*"
tqdm = "*"

[tool.poetry.dev-dependencies]
black = "^23.0"
isort = "^5.0"
mypy = "^0.910"

[tool.poetry.scripts]
easycarla = "easycarla.main:main"

[tool.black]
line-length = 160

[tool.isort]
profile = "black"

[tool.mypy]
python_version = "3.10"
strict = true